crates/check_cli/tests/snapshots/main_cases_diagnostics/logs_the_appropriate_messages_according_to_set_diagnostics_level.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{
  "files": {
    "includes": ["test.js"]
  },
  "linter": {
    "rules": {
      "suspicious": {
        "noDebugger": "warn"
      }
    }
  }
}
```

## `test.js`

```js
debugger;
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
