crates/check_cli/tests/snapshots/main_cases_diagnostics/max_diagnostics_verbose.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `src/file.js`

```js
  statement(  )  
```

# Termination Message

```block
ci ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
src/folder_0/package-lock.json project  VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The file src/folder_0/package-lock.json is protected because is handled by another tool. Check won't process it.
  
  Verbose advice
  
    i You can hide this diagnostic by using --diagnostic-level=warn to increase the diagnostic level shown by CLI.
    

```

```block
src/folder_1/package-lock.json project  VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The file src/folder_1/package-lock.json is protected because is handled by another tool. Check won't process it.
  
  Verbose advice
  
    i You can hide this diagnostic by using --diagnostic-level=warn to increase the diagnostic level shown by CLI.
    

```

```block
src/folder_2/package-lock.json project  VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The file src/folder_2/package-lock.json is protected because is handled by another tool. Check won't process it.
  
  Verbose advice
  
    i You can hide this diagnostic by using --diagnostic-level=warn to increase the diagnostic level shown by CLI.
    

```

```block
src/folder_3/package-lock.json project  VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The file src/folder_3/package-lock.json is protected because is handled by another tool. Check won't process it.
  
  Verbose advice
  
    i You can hide this diagnostic by using --diagnostic-level=warn to increase the diagnostic level shown by CLI.
    

```

```block
src/folder_4/package-lock.json project  VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The file src/folder_4/package-lock.json is protected because is handled by another tool. Check won't process it.
  
  Verbose advice
  
    i You can hide this diagnostic by using --diagnostic-level=warn to increase the diagnostic level shown by CLI.
    

```

```block
src/folder_5/package-lock.json project  VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The file src/folder_5/package-lock.json is protected because is handled by another tool. Check won't process it.
  
  Verbose advice
  
    i You can hide this diagnostic by using --diagnostic-level=warn to increase the diagnostic level shown by CLI.
    

```

```block
src/folder_6/package-lock.json project  VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The file src/folder_6/package-lock.json is protected because is handled by another tool. Check won't process it.
  
  Verbose advice
  
    i You can hide this diagnostic by using --diagnostic-level=warn to increase the diagnostic level shown by CLI.
    

```

```block
src/folder_7/package-lock.json project  VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The file src/folder_7/package-lock.json is protected because is handled by another tool. Check won't process it.
  
  Verbose advice
  
    i You can hide this diagnostic by using --diagnostic-level=warn to increase the diagnostic level shown by CLI.
    

```

```block
src/file.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × File content differs from formatting output
  
    1   │ - ··statement(··)··
      1 │ + statement();
      2 │ + 
  

```

```block
 VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Files processed:
  
  - src/file.js
  

```

```block
 VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Files fixed:
  
  ! The list is empty.
  

```

```block
Scanned project folder in <TIME>.
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
